# libgalaxy

./: CMakeLists.txt  Galaxy.c  Glx-mpa.c  Loaders.c
Hdr/: Glx-it.h
